--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build package
-        run: echo ${{ github.ref }}
+        run: git branch --contains tags/${GITHUB_REF##*/}
 
       - name: Exit if not on master branch
         if: endsWith(github.ref, 'master') == false
