--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -14,7 +14,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build package
-        run: git branch --contains tags/${GITHUB_REF##*/}
+        run: |
+          git checkout master
+          git branch --contains tags/${GITHUB_REF##*/}
 
       - name: Exit if not on master branch
         if: endsWith(github.ref, 'master') == false
