--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Build package
         run: |
           git checkout origin/master
+
+      - name: print branch
+        run: |
           git branch --contains tags/${GITHUB_REF##*/}
 
       - name: Exit if not on master branch
