--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -23,9 +23,9 @@ jobs:
       - name: print branch
         run: |
           echo ${GITHUB_REF##*/}
-          git branch -r
-          git branch -r --contains ${GITHUB_SHA}
-          git branch -r --contains tags/${GITHUB_REF##*/}
+          git branch -a
+          git branch -a --contains ${GITHUB_SHA}
+          git branch -a --contains tags/${GITHUB_REF##*/}
 
       - name: Exit if not on master branch
         if: endsWith(github.ref, 'master') == false
