--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Build package
         run: |
-          git branch -a --format='%(refname:short)' --contains ${GITHUB_REF##*/}
+          git branch -a
 
       - name: Exit
         run: exit 1
